// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Matrix component Adjacency matrix Creates matrix correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Matrix
    appendLinks={[MockFunction]}
    appendNodes={[MockFunction]}
    links={
      Array [
        Object {
          "label": "e0",
          "source": Object {
            "id": 1,
            "label": "A",
          },
          "target": Object {
            "id": 2,
            "label": "B",
          },
          "twoWay": false,
        },
        Object {
          "label": "e1",
          "source": Object {
            "id": 3,
            "label": "C",
          },
          "target": Object {
            "id": 2,
            "label": "B",
          },
          "twoWay": true,
        },
        Object {
          "label": "e2",
          "source": Object {
            "id": 3,
            "label": "C",
          },
          "target": Object {
            "id": 3,
            "label": "C",
          },
          "twoWay": true,
        },
      ]
    }
    nodes={
      Array [
        Object {
          "id": 1,
          "label": "A",
        },
        Object {
          "id": 2,
          "label": "B",
        },
        Object {
          "id": 3,
          "label": "C",
        },
      ]
    }
    type="Adjacency"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="Matrix-header"
        >
          Adjacency matrix
        </h2>,
        <table
          className="matrix-table"
        >
          <thead>
            <tr>
              <th />
              <th>
                1
              </th>
              <th>
                2
              </th>
              <th>
                3
              </th>
              <input
                onBlur={[Function]}
                placeholder="+"
                type="text"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <th>
                1
              </th>
              <td>
                0
              </td>
              <td>
                1
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <th>
                2
              </th>
              <td>
                0
              </td>
              <td>
                0
              </td>
              <td>
                1
              </td>
            </tr>
            <tr>
              <th>
                3
              </th>
              <td>
                0
              </td>
              <td>
                1
              </td>
              <td>
                1
              </td>
            </tr>
            <tr>
              <input
                onBlur={[Function]}
                placeholder="+"
                type="text"
              />
            </tr>
          </tbody>
        </table>,
      ],
      "className": "Matrix",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Adjacency matrix",
          "className": "Matrix-header",
        },
        "ref": null,
        "rendered": "Adjacency matrix",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <thead>
              <tr>
                <th />
                <th>
                  1
                </th>
                <th>
                  2
                </th>
                <th>
                  3
                </th>
                <input
                  onBlur={[Function]}
                  placeholder="+"
                  type="text"
                />
              </tr>
            </thead>,
            <tbody>
              <tr>
                <th>
                  1
                </th>
                <td>
                  0
                </td>
                <td>
                  1
                </td>
                <td>
                  0
                </td>
              </tr>
              <tr>
                <th>
                  2
                </th>
                <td>
                  0
                </td>
                <td>
                  0
                </td>
                <td>
                  1
                </td>
              </tr>
              <tr>
                <th>
                  3
                </th>
                <td>
                  0
                </td>
                <td>
                  1
                </td>
                <td>
                  1
                </td>
              </tr>
              <tr>
                <input
                  onBlur={[Function]}
                  placeholder="+"
                  type="text"
                />
              </tr>
            </tbody>,
          ],
          "className": "matrix-table",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <tr>
                <th />
                <th>
                  1
                </th>
                <th>
                  2
                </th>
                <th>
                  3
                </th>
                <input
                  onBlur={[Function]}
                  placeholder="+"
                  type="text"
                />
              </tr>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <th />,
                  Array [
                    <th>
                      1
                    </th>,
                    <th>
                      2
                    </th>,
                    <th>
                      3
                    </th>,
                  ],
                  <input
                    onBlur={[Function]}
                    placeholder="+"
                    type="text"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": "head_1",
                  "nodeType": "host",
                  "props": Object {
                    "children": 1,
                  },
                  "ref": null,
                  "rendered": 1,
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": "head_2",
                  "nodeType": "host",
                  "props": Object {
                    "children": 2,
                  },
                  "ref": null,
                  "rendered": 2,
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": "head_3",
                  "nodeType": "host",
                  "props": Object {
                    "children": 3,
                  },
                  "ref": null,
                  "rendered": 3,
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "onBlur": [Function],
                    "placeholder": "+",
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "tr",
            },
            "type": "thead",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                Array [
                  <tr>
                    <th>
                      1
                    </th>
                    <td>
                      0
                    </td>
                    <td>
                      1
                    </td>
                    <td>
                      0
                    </td>
                  </tr>,
                  <tr>
                    <th>
                      2
                    </th>
                    <td>
                      0
                    </td>
                    <td>
                      0
                    </td>
                    <td>
                      1
                    </td>
                  </tr>,
                  <tr>
                    <th>
                      3
                    </th>
                    <td>
                      0
                    </td>
                    <td>
                      1
                    </td>
                    <td>
                      1
                    </td>
                  </tr>,
                ],
                <tr>
                  <input
                    onBlur={[Function]}
                    placeholder="+"
                    type="text"
                  />
                </tr>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "row_1",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <th>
                      1
                    </th>,
                    Array [
                      <td>
                        0
                      </td>,
                      <td>
                        1
                      </td>,
                      <td>
                        0
                      </td>,
                    ],
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 1,
                    },
                    "ref": null,
                    "rendered": 1,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "1_1",
                    "nodeType": "host",
                    "props": Object {
                      "children": "0",
                    },
                    "ref": null,
                    "rendered": "0",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "1_2",
                    "nodeType": "host",
                    "props": Object {
                      "children": "1",
                    },
                    "ref": null,
                    "rendered": "1",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "1_3",
                    "nodeType": "host",
                    "props": Object {
                      "children": "0",
                    },
                    "ref": null,
                    "rendered": "0",
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": "row_2",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <th>
                      2
                    </th>,
                    Array [
                      <td>
                        0
                      </td>,
                      <td>
                        0
                      </td>,
                      <td>
                        1
                      </td>,
                    ],
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 2,
                    },
                    "ref": null,
                    "rendered": 2,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "2_1",
                    "nodeType": "host",
                    "props": Object {
                      "children": "0",
                    },
                    "ref": null,
                    "rendered": "0",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "2_2",
                    "nodeType": "host",
                    "props": Object {
                      "children": "0",
                    },
                    "ref": null,
                    "rendered": "0",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "2_3",
                    "nodeType": "host",
                    "props": Object {
                      "children": "1",
                    },
                    "ref": null,
                    "rendered": "1",
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": "row_3",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <th>
                      3
                    </th>,
                    Array [
                      <td>
                        0
                      </td>,
                      <td>
                        1
                      </td>,
                      <td>
                        1
                      </td>,
                    ],
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 3,
                    },
                    "ref": null,
                    "rendered": 3,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "3_1",
                    "nodeType": "host",
                    "props": Object {
                      "children": "0",
                    },
                    "ref": null,
                    "rendered": "0",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "3_2",
                    "nodeType": "host",
                    "props": Object {
                      "children": "1",
                    },
                    "ref": null,
                    "rendered": "1",
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "3_3",
                    "nodeType": "host",
                    "props": Object {
                      "children": "1",
                    },
                    "ref": null,
                    "rendered": "1",
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <input
                    onBlur={[Function]}
                    placeholder="+"
                    type="text"
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "onBlur": [Function],
                    "placeholder": "+",
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                "type": "tr",
              },
            ],
            "type": "tbody",
          },
        ],
        "type": "table",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="Matrix-header"
          >
            Adjacency matrix
          </h2>,
          <table
            className="matrix-table"
          >
            <thead>
              <tr>
                <th />
                <th>
                  1
                </th>
                <th>
                  2
                </th>
                <th>
                  3
                </th>
                <input
                  onBlur={[Function]}
                  placeholder="+"
                  type="text"
                />
              </tr>
            </thead>
            <tbody>
              <tr>
                <th>
                  1
                </th>
                <td>
                  0
                </td>
                <td>
                  1
                </td>
                <td>
                  0
                </td>
              </tr>
              <tr>
                <th>
                  2
                </th>
                <td>
                  0
                </td>
                <td>
                  0
                </td>
                <td>
                  1
                </td>
              </tr>
              <tr>
                <th>
                  3
                </th>
                <td>
                  0
                </td>
                <td>
                  1
                </td>
                <td>
                  1
                </td>
              </tr>
              <tr>
                <input
                  onBlur={[Function]}
                  placeholder="+"
                  type="text"
                />
              </tr>
            </tbody>
          </table>,
        ],
        "className": "Matrix",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Adjacency matrix",
            "className": "Matrix-header",
          },
          "ref": null,
          "rendered": "Adjacency matrix",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <thead>
                <tr>
                  <th />
                  <th>
                    1
                  </th>
                  <th>
                    2
                  </th>
                  <th>
                    3
                  </th>
                  <input
                    onBlur={[Function]}
                    placeholder="+"
                    type="text"
                  />
                </tr>
              </thead>,
              <tbody>
                <tr>
                  <th>
                    1
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    1
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th>
                    2
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    1
                  </td>
                </tr>
                <tr>
                  <th>
                    3
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    1
                  </td>
                  <td>
                    1
                  </td>
                </tr>
                <tr>
                  <input
                    onBlur={[Function]}
                    placeholder="+"
                    type="text"
                  />
                </tr>
              </tbody>,
            ],
            "className": "matrix-table",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <tr>
                  <th />
                  <th>
                    1
                  </th>
                  <th>
                    2
                  </th>
                  <th>
                    3
                  </th>
                  <input
                    onBlur={[Function]}
                    placeholder="+"
                    type="text"
                  />
                </tr>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <th />,
                    Array [
                      <th>
                        1
                      </th>,
                      <th>
                        2
                      </th>,
                      <th>
                        3
                      </th>,
                    ],
                    <input
                      onBlur={[Function]}
                      placeholder="+"
                      type="text"
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "head_1",
                    "nodeType": "host",
                    "props": Object {
                      "children": 1,
                    },
                    "ref": null,
                    "rendered": 1,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "head_2",
                    "nodeType": "host",
                    "props": Object {
                      "children": 2,
                    },
                    "ref": null,
                    "rendered": 2,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "head_3",
                    "nodeType": "host",
                    "props": Object {
                      "children": 3,
                    },
                    "ref": null,
                    "rendered": 3,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "onBlur": [Function],
                      "placeholder": "+",
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "tr",
              },
              "type": "thead",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  Array [
                    <tr>
                      <th>
                        1
                      </th>
                      <td>
                        0
                      </td>
                      <td>
                        1
                      </td>
                      <td>
                        0
                      </td>
                    </tr>,
                    <tr>
                      <th>
                        2
                      </th>
                      <td>
                        0
                      </td>
                      <td>
                        0
                      </td>
                      <td>
                        1
                      </td>
                    </tr>,
                    <tr>
                      <th>
                        3
                      </th>
                      <td>
                        0
                      </td>
                      <td>
                        1
                      </td>
                      <td>
                        1
                      </td>
                    </tr>,
                  ],
                  <tr>
                    <input
                      onBlur={[Function]}
                      placeholder="+"
                      type="text"
                    />
                  </tr>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "row_1",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <th>
                        1
                      </th>,
                      Array [
                        <td>
                          0
                        </td>,
                        <td>
                          1
                        </td>,
                        <td>
                          0
                        </td>,
                      ],
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 1,
                      },
                      "ref": null,
                      "rendered": 1,
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": "1_1",
                      "nodeType": "host",
                      "props": Object {
                        "children": "0",
                      },
                      "ref": null,
                      "rendered": "0",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "1_2",
                      "nodeType": "host",
                      "props": Object {
                        "children": "1",
                      },
                      "ref": null,
                      "rendered": "1",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "1_3",
                      "nodeType": "host",
                      "props": Object {
                        "children": "0",
                      },
                      "ref": null,
                      "rendered": "0",
                      "type": "td",
                    },
                  ],
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": "row_2",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <th>
                        2
                      </th>,
                      Array [
                        <td>
                          0
                        </td>,
                        <td>
                          0
                        </td>,
                        <td>
                          1
                        </td>,
                      ],
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 2,
                      },
                      "ref": null,
                      "rendered": 2,
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": "2_1",
                      "nodeType": "host",
                      "props": Object {
                        "children": "0",
                      },
                      "ref": null,
                      "rendered": "0",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "2_2",
                      "nodeType": "host",
                      "props": Object {
                        "children": "0",
                      },
                      "ref": null,
                      "rendered": "0",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "2_3",
                      "nodeType": "host",
                      "props": Object {
                        "children": "1",
                      },
                      "ref": null,
                      "rendered": "1",
                      "type": "td",
                    },
                  ],
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": "row_3",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <th>
                        3
                      </th>,
                      Array [
                        <td>
                          0
                        </td>,
                        <td>
                          1
                        </td>,
                        <td>
                          1
                        </td>,
                      ],
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 3,
                      },
                      "ref": null,
                      "rendered": 3,
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": "3_1",
                      "nodeType": "host",
                      "props": Object {
                        "children": "0",
                      },
                      "ref": null,
                      "rendered": "0",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "3_2",
                      "nodeType": "host",
                      "props": Object {
                        "children": "1",
                      },
                      "ref": null,
                      "rendered": "1",
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "3_3",
                      "nodeType": "host",
                      "props": Object {
                        "children": "1",
                      },
                      "ref": null,
                      "rendered": "1",
                      "type": "td",
                    },
                  ],
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <input
                      onBlur={[Function]}
                      placeholder="+"
                      type="text"
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "onBlur": [Function],
                      "placeholder": "+",
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  "type": "tr",
                },
              ],
              "type": "tbody",
            },
          ],
          "type": "table",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing Matrix component Incidence matrix Creates matrix correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Matrix
    appendLinks={[MockFunction]}
    appendNodes={[MockFunction]}
    links={
      Array [
        Object {
          "label": "e0",
          "source": Object {
            "id": 1,
            "label": "A",
          },
          "target": Object {
            "id": 2,
            "label": "B",
          },
          "twoWay": false,
        },
        Object {
          "label": "e1",
          "source": Object {
            "id": 3,
            "label": "C",
          },
          "target": Object {
            "id": 2,
            "label": "B",
          },
          "twoWay": true,
        },
        Object {
          "label": "e2",
          "source": Object {
            "id": 3,
            "label": "C",
          },
          "target": Object {
            "id": 3,
            "label": "C",
          },
          "twoWay": true,
        },
      ]
    }
    nodes={
      Array [
        Object {
          "id": 1,
          "label": "A",
        },
        Object {
          "id": 2,
          "label": "B",
        },
        Object {
          "id": 3,
          "label": "C",
        },
      ]
    }
    type="Incidence"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="Matrix-header"
        >
          Incidence matrix
        </h2>,
        <table
          className="matrix-table"
        >
          <thead>
            <tr>
              <th />
              <th>
                e0
              </th>
              <th>
                e1
              </th>
              <th>
                e2
              </th>
              <input
                onBlur={[Function]}
                placeholder="+"
                type="text"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <th>
                1
              </th>
              <td>
                1
              </td>
              <td>
                0
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <th>
                2
              </th>
              <td>
                -1
              </td>
              <td>
                1
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <th>
                3
              </th>
              <td>
                0
              </td>
              <td>
                1
              </td>
              <td>
                1
              </td>
            </tr>
            <input
              onBlur={[Function]}
              placeholder="+"
              type="text"
            />
          </tbody>
        </table>,
      ],
      "className": "Matrix",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Incidence matrix",
          "className": "Matrix-header",
        },
        "ref": null,
        "rendered": "Incidence matrix",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <thead>
              <tr>
                <th />
                <th>
                  e0
                </th>
                <th>
                  e1
                </th>
                <th>
                  e2
                </th>
                <input
                  onBlur={[Function]}
                  placeholder="+"
                  type="text"
                />
              </tr>
            </thead>,
            <tbody>
              <tr>
                <th>
                  1
                </th>
                <td>
                  1
                </td>
                <td>
                  0
                </td>
                <td>
                  0
                </td>
              </tr>
              <tr>
                <th>
                  2
                </th>
                <td>
                  -1
                </td>
                <td>
                  1
                </td>
                <td>
                  0
                </td>
              </tr>
              <tr>
                <th>
                  3
                </th>
                <td>
                  0
                </td>
                <td>
                  1
                </td>
                <td>
                  1
                </td>
              </tr>
              <input
                onBlur={[Function]}
                placeholder="+"
                type="text"
              />
            </tbody>,
          ],
          "className": "matrix-table",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <tr>
                <th />
                <th>
                  e0
                </th>
                <th>
                  e1
                </th>
                <th>
                  e2
                </th>
                <input
                  onBlur={[Function]}
                  placeholder="+"
                  type="text"
                />
              </tr>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <th />,
                  Array [
                    <th>
                      e0
                    </th>,
                    <th>
                      e1
                    </th>,
                    <th>
                      e2
                    </th>,
                  ],
                  <input
                    onBlur={[Function]}
                    placeholder="+"
                    type="text"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": "head_e0",
                  "nodeType": "host",
                  "props": Object {
                    "children": "e0",
                  },
                  "ref": null,
                  "rendered": "e0",
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": "head_e1",
                  "nodeType": "host",
                  "props": Object {
                    "children": "e1",
                  },
                  "ref": null,
                  "rendered": "e1",
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": "head_e2",
                  "nodeType": "host",
                  "props": Object {
                    "children": "e2",
                  },
                  "ref": null,
                  "rendered": "e2",
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "onBlur": [Function],
                    "placeholder": "+",
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "tr",
            },
            "type": "thead",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                Array [
                  <tr>
                    <th>
                      1
                    </th>
                    <td>
                      1
                    </td>
                    <td>
                      0
                    </td>
                    <td>
                      0
                    </td>
                  </tr>,
                  <tr>
                    <th>
                      2
                    </th>
                    <td>
                      -1
                    </td>
                    <td>
                      1
                    </td>
                    <td>
                      0
                    </td>
                  </tr>,
                  <tr>
                    <th>
                      3
                    </th>
                    <td>
                      0
                    </td>
                    <td>
                      1
                    </td>
                    <td>
                      1
                    </td>
                  </tr>,
                ],
                <input
                  onBlur={[Function]}
                  placeholder="+"
                  type="text"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "row_1",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <th>
                      1
                    </th>,
                    Array [
                      <td>
                        1
                      </td>,
                      <td>
                        0
                      </td>,
                      <td>
                        0
                      </td>,
                    ],
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 1,
                    },
                    "ref": null,
                    "rendered": 1,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "1_0",
                    "nodeType": "host",
                    "props": Object {
                      "children": 1,
                    },
                    "ref": null,
                    "rendered": 1,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "1_1",
                    "nodeType": "host",
                    "props": Object {
                      "children": 0,
                    },
                    "ref": null,
                    "rendered": 0,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "1_2",
                    "nodeType": "host",
                    "props": Object {
                      "children": 0,
                    },
                    "ref": null,
                    "rendered": 0,
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": "row_2",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <th>
                      2
                    </th>,
                    Array [
                      <td>
                        -1
                      </td>,
                      <td>
                        1
                      </td>,
                      <td>
                        0
                      </td>,
                    ],
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 2,
                    },
                    "ref": null,
                    "rendered": 2,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "2_0",
                    "nodeType": "host",
                    "props": Object {
                      "children": -1,
                    },
                    "ref": null,
                    "rendered": -1,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "2_1",
                    "nodeType": "host",
                    "props": Object {
                      "children": 1,
                    },
                    "ref": null,
                    "rendered": 1,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "2_2",
                    "nodeType": "host",
                    "props": Object {
                      "children": 0,
                    },
                    "ref": null,
                    "rendered": 0,
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": "row_3",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <th>
                      3
                    </th>,
                    Array [
                      <td>
                        0
                      </td>,
                      <td>
                        1
                      </td>,
                      <td>
                        1
                      </td>,
                    ],
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 3,
                    },
                    "ref": null,
                    "rendered": 3,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "3_0",
                    "nodeType": "host",
                    "props": Object {
                      "children": 0,
                    },
                    "ref": null,
                    "rendered": 0,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "3_1",
                    "nodeType": "host",
                    "props": Object {
                      "children": 1,
                    },
                    "ref": null,
                    "rendered": 1,
                    "type": "td",
                  },
                  Object {
                    "instance": null,
                    "key": "3_2",
                    "nodeType": "host",
                    "props": Object {
                      "children": 1,
                    },
                    "ref": null,
                    "rendered": 1,
                    "type": "td",
                  },
                ],
                "type": "tr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "onBlur": [Function],
                  "placeholder": "+",
                  "type": "text",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
            ],
            "type": "tbody",
          },
        ],
        "type": "table",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="Matrix-header"
          >
            Incidence matrix
          </h2>,
          <table
            className="matrix-table"
          >
            <thead>
              <tr>
                <th />
                <th>
                  e0
                </th>
                <th>
                  e1
                </th>
                <th>
                  e2
                </th>
                <input
                  onBlur={[Function]}
                  placeholder="+"
                  type="text"
                />
              </tr>
            </thead>
            <tbody>
              <tr>
                <th>
                  1
                </th>
                <td>
                  1
                </td>
                <td>
                  0
                </td>
                <td>
                  0
                </td>
              </tr>
              <tr>
                <th>
                  2
                </th>
                <td>
                  -1
                </td>
                <td>
                  1
                </td>
                <td>
                  0
                </td>
              </tr>
              <tr>
                <th>
                  3
                </th>
                <td>
                  0
                </td>
                <td>
                  1
                </td>
                <td>
                  1
                </td>
              </tr>
              <input
                onBlur={[Function]}
                placeholder="+"
                type="text"
              />
            </tbody>
          </table>,
        ],
        "className": "Matrix",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Incidence matrix",
            "className": "Matrix-header",
          },
          "ref": null,
          "rendered": "Incidence matrix",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <thead>
                <tr>
                  <th />
                  <th>
                    e0
                  </th>
                  <th>
                    e1
                  </th>
                  <th>
                    e2
                  </th>
                  <input
                    onBlur={[Function]}
                    placeholder="+"
                    type="text"
                  />
                </tr>
              </thead>,
              <tbody>
                <tr>
                  <th>
                    1
                  </th>
                  <td>
                    1
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th>
                    2
                  </th>
                  <td>
                    -1
                  </td>
                  <td>
                    1
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th>
                    3
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    1
                  </td>
                  <td>
                    1
                  </td>
                </tr>
                <input
                  onBlur={[Function]}
                  placeholder="+"
                  type="text"
                />
              </tbody>,
            ],
            "className": "matrix-table",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <tr>
                  <th />
                  <th>
                    e0
                  </th>
                  <th>
                    e1
                  </th>
                  <th>
                    e2
                  </th>
                  <input
                    onBlur={[Function]}
                    placeholder="+"
                    type="text"
                  />
                </tr>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <th />,
                    Array [
                      <th>
                        e0
                      </th>,
                      <th>
                        e1
                      </th>,
                      <th>
                        e2
                      </th>,
                    ],
                    <input
                      onBlur={[Function]}
                      placeholder="+"
                      type="text"
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "head_e0",
                    "nodeType": "host",
                    "props": Object {
                      "children": "e0",
                    },
                    "ref": null,
                    "rendered": "e0",
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "head_e1",
                    "nodeType": "host",
                    "props": Object {
                      "children": "e1",
                    },
                    "ref": null,
                    "rendered": "e1",
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": "head_e2",
                    "nodeType": "host",
                    "props": Object {
                      "children": "e2",
                    },
                    "ref": null,
                    "rendered": "e2",
                    "type": "th",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "onBlur": [Function],
                      "placeholder": "+",
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "tr",
              },
              "type": "thead",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  Array [
                    <tr>
                      <th>
                        1
                      </th>
                      <td>
                        1
                      </td>
                      <td>
                        0
                      </td>
                      <td>
                        0
                      </td>
                    </tr>,
                    <tr>
                      <th>
                        2
                      </th>
                      <td>
                        -1
                      </td>
                      <td>
                        1
                      </td>
                      <td>
                        0
                      </td>
                    </tr>,
                    <tr>
                      <th>
                        3
                      </th>
                      <td>
                        0
                      </td>
                      <td>
                        1
                      </td>
                      <td>
                        1
                      </td>
                    </tr>,
                  ],
                  <input
                    onBlur={[Function]}
                    placeholder="+"
                    type="text"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "row_1",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <th>
                        1
                      </th>,
                      Array [
                        <td>
                          1
                        </td>,
                        <td>
                          0
                        </td>,
                        <td>
                          0
                        </td>,
                      ],
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 1,
                      },
                      "ref": null,
                      "rendered": 1,
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": "1_0",
                      "nodeType": "host",
                      "props": Object {
                        "children": 1,
                      },
                      "ref": null,
                      "rendered": 1,
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "1_1",
                      "nodeType": "host",
                      "props": Object {
                        "children": 0,
                      },
                      "ref": null,
                      "rendered": 0,
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "1_2",
                      "nodeType": "host",
                      "props": Object {
                        "children": 0,
                      },
                      "ref": null,
                      "rendered": 0,
                      "type": "td",
                    },
                  ],
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": "row_2",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <th>
                        2
                      </th>,
                      Array [
                        <td>
                          -1
                        </td>,
                        <td>
                          1
                        </td>,
                        <td>
                          0
                        </td>,
                      ],
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 2,
                      },
                      "ref": null,
                      "rendered": 2,
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": "2_0",
                      "nodeType": "host",
                      "props": Object {
                        "children": -1,
                      },
                      "ref": null,
                      "rendered": -1,
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "2_1",
                      "nodeType": "host",
                      "props": Object {
                        "children": 1,
                      },
                      "ref": null,
                      "rendered": 1,
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "2_2",
                      "nodeType": "host",
                      "props": Object {
                        "children": 0,
                      },
                      "ref": null,
                      "rendered": 0,
                      "type": "td",
                    },
                  ],
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": "row_3",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <th>
                        3
                      </th>,
                      Array [
                        <td>
                          0
                        </td>,
                        <td>
                          1
                        </td>,
                        <td>
                          1
                        </td>,
                      ],
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 3,
                      },
                      "ref": null,
                      "rendered": 3,
                      "type": "th",
                    },
                    Object {
                      "instance": null,
                      "key": "3_0",
                      "nodeType": "host",
                      "props": Object {
                        "children": 0,
                      },
                      "ref": null,
                      "rendered": 0,
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "3_1",
                      "nodeType": "host",
                      "props": Object {
                        "children": 1,
                      },
                      "ref": null,
                      "rendered": 1,
                      "type": "td",
                    },
                    Object {
                      "instance": null,
                      "key": "3_2",
                      "nodeType": "host",
                      "props": Object {
                        "children": 1,
                      },
                      "ref": null,
                      "rendered": 1,
                      "type": "td",
                    },
                  ],
                  "type": "tr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "onBlur": [Function],
                    "placeholder": "+",
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "tbody",
            },
          ],
          "type": "table",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
